# Warehouse14

./: .dockerignore  .editorconfig  .env.example  .gitignore  .npmrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.claude/: launch.json
.github/workflows/: ci.yml  db-suites.yml  deploy-images.yml  release.yml
apps/: .gitkeep
apps/api-cloud/: .env.example  Dockerfile  README.md  package.json  vitest.config.ts
apps/api-cloud/dev-certs/: dev-client.crt  dev-client.key
apps/api-cloud/scripts/: dev-bootstrap.ts  provision-staff.ts  seed-test-data.ts
apps/api-cloud/src/: app.ts  server.ts
apps/control-desktop/: .env.development  .env.production  .gitignore  index.html  package.json  preview.html  tsconfig.json  vite.config.ts
apps/control-desktop/src/: App.tsx  AuthGate.tsx  ErrorBoundary.tsx  api-context.tsx  main.tsx  preview.tsx  router.ts  step-up-service.ts  surfaces.tsx
apps/control-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/control-desktop/src-tauri/capabilities/: default.json
apps/control-desktop/src-tauri/icons/: generate.py  icon.icns
apps/control-desktop/src-tauri/src/: lib.rs  main.rs
apps/mobile/: .env.example  .env.production  .gitignore  .npmrc  BUILD.md  PLATFORMS.md  PRODUCT.md  app.config.ts  app.json  components.json  credentials.example.json  eas.json  global.css  google-services.json  index.js  jest.guard.config.js  metro.config.js  package.json  postcss.config.mjs  tsconfig.json
apps/mobile/dev/: ankauf-beleg-proof.mjs  available-for-sale-proof.mjs  belege-counts-proof.mjs  ebay-pipeline-proof.mjs  fotos-proof.mjs  kyc-proof.mjs  p0-lager-proof.mjs  reset-dev-backend.sh  schatzkammer-proof.mjs  spielwirtschaft-proof.mjs
apps/mobile/plugins/: withRecordAudio.js
apps/mobile/scripts/: release-build.sh  render-zielkarte-art.py
apps/mobile/test/: german-text.test.ts  guard-setup.js  setup.ts
apps/storefront/: .dockerignore  .gitignore  Dockerfile  README.md  START-HIER.md  docker-compose.storefront.yml  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
apps/storefront-mobile/: .env.example  app.config.ts  app.json  expo-env.d.ts  global.css  metro.config.js  package.json  tsconfig.json
apps/storefront-mobile/plugins/: withGradleWrapperVersion.js
apps/tauri-pos/: .env.example  .env.production  .gitignore  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  warehouse14_updater.key.pub
apps/tauri-pos/scripts/: release-build.sh
apps/tauri-pos/src/: main.tsx
apps/tauri-pos/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
apps/tauri-pos/src-tauri/capabilities/: default.json
apps/tauri-pos/src-tauri/companion-web/: app.js  index.html
apps/tauri-pos/src-tauri/migrations/: 0001_outbox.sql  0002_kyc.sql  0003_tse_queue.sql
apps/tauri-pos/src-tauri/src/: config.rs  error.rs  lib.rs  main.rs
apps/tauri-pos/src-tauri/src/commands/: companion.rs  image.rs  kyc.rs  label.rs  mdns.rs  mod.rs  pdf.rs  scale.rs  system.rs  thermal.rs  tse.rs  win_print.rs  zvt.rs
apps/tauri-pos/src-tauri/src/mock/: mod.rs  printer_mock.rs  tse_mock.rs  zvt_mock.rs
apps/tauri-pos/src-tauri/tests/: mock_hardening.rs  tse_hil.rs  zvt_hil.rs
apps/worker/: Dockerfile  README.md  package.json  tsconfig.json  vitest.config.ts
apps/worker/src/: app.ts  server.ts
docs/: BACKLOG.md  DESIGN-SYSTEM.md  GDPR-ERASURE-SPEC.md  PLAN-bestellungen-als-arbeitsplatz.md  PLAN-reserve-and-collect.md  SYSTEM-REVIEW-2026-06.md  UX-REDESIGN.md  Verfahrensdokumentation.md  cashier-parity-audit-2026-07-09.md  companion-architecture.md  deep-audit-2026-06-07.md  design-ux-brief.md  desktop-upgrade-plan.md  entwicklungsplan-2026-06.md  fiscal-export-review-2026-07-08.md  fiscal-recovery-spec.md  go-live-hardware-checklist.md  go-live-preparation.md  ios-companion-trusted-connection-plan.md  jarvis-agent.md  load-testing.md  memory.md  mobile-companion-repair-plan.md  phase2-honesty-sweep-checklist.md  prod-readiness-2026-07-12.md  security-audit-2026-06-07.md  steuerberater-anfrage.md  system-logic-audit-2026-06.md  verfahrensdokumentation-kasse.md  zero-trust-roadmap-2026-07-12.md
docs/architecture/: RED_TEAM_API_AUDIT_2026-05-25.md  RED_TEAM_API_AUDIT_2026-05-25_addendum.md  RED_TEAM_AUDIT_2026-05-25.md  commerce-seo-audit.md  day8-domain-decision.md
docs/architecture/adr/: 0001-monorepo-turborepo.md  0002-drizzle-over-prisma.md  0003-tauri-only-no-electron.md  0004-25a-excludes-raw-metals.md  0005-eu-data-residency.md  0006-better-auth-over-lucia.md  0007-gwg-ankauf-always-id.md  0008-schema-architecture.md  0009-control-desktop-tauri-wrapper.md  0010-ai-gateway-provider-abstraction.md  0011-content-cms-pg-native.md  0012-oracle-cloud-frankfurt-hosting.md  0013-payments-mollie-stripe-zvt-sumup.md  0014-live-ops-mtls-sse-transport.md  0015-ai-intake-pipeline.md  0020-smart-appointment-system.md  (+8 more)
docs/branding/: email-setup.md  email-signature.html
docs/compliance/: README.md
docs/runbooks/: .audit-0078-findings.json  0045-0048-prod-apply.md  0045-0050-prod-apply.md  0077-prod-apply.md  0078-kyc-volume.md  0079-play-store.md  0090-auth-hardening.md  0095-transactional-mail-google-workspace.md  hil-hardware.md
docs/samples/: DATEV_Buchungsstapel_2026-06-06.csv  Kassenbericht_2026-06-06.csv  README.md
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
infrastructure/ci/: README.md  release.yml
infrastructure/docker/: .env.production.example  README.prod.md  docker-compose.prod.yml  docker-compose.yml  migrate.Dockerfile  migrate.sh
patches/: react-native-css@3.0.7.patch
scripts/: backup-db.sh  check-no-control-bytes.mjs  check-sql-columns.mjs  download-fonts.sh  honesty-gate.sh  lint-added.mjs  no-userfacing-dashes.mjs  release-to-github.sh  set-version.mjs
scripts/load-tests/: README.md  baseline.js  burst.js  export-under-load.js  smoke.js  sse-fanout.js
(+1018 files in other folders)
