[package]
name = "warehouse14-control-desktop"
version = "0.1.0"
description = "Warehouse14 Owner Control Desktop (Tauri 2 back-office)"
edition = "2021"
publish = false
rust-version = "1.75"

[lib]
name = "warehouse14_control_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core with the built-in tray icon support.
tauri = { version = "2", features = ["tray-icon"] }
# Native OS notifications (launch greeting + "already running" toast).
tauri-plugin-notification = "2"
# Refuse a second concurrent launch — the back-office is single-window; a
# re-launch attempt focuses the existing window instead (Decision #41).
tauri-plugin-single-instance = "2"
