[package]
name = "warehouse14-tauri-pos"
version = "0.4.24"
description = "Warehouse14 cashier-floor POS (Tauri 2 shell)"
edition = "2021"
publish = false
rust-version = "1.75"

[lib]
name = "warehouse14_tauri_pos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# ── Tauri core + officially-supported plugins ────────────────────────
# V1 only needs `shell` (for `open_pdf_preview`). Settings persistence
# happens client-side via localStorage + the audit-logged API, keeping
# the native footprint small. `store` + `dialog` plugins land in V1.1
# if the operator asks for a "Speichern unter…" file picker.
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
# Auto-update from GitHub Releases (Day-15 release automation).
# The public key lives in tauri.conf.json plugins.updater.pubkey; the
# matching private key (TAURI_SIGNING_PRIVATE_KEY) is held only in
# GitHub Actions secrets — never committed.
tauri-plugin-updater = "2"
# Lets the React side restart the process after applying an update —
# required for the auto-install flow on Windows + macOS.
tauri-plugin-process = "2"
# ADR-0044 Phase 3 — local SQLite outbox for offline mutation durability.
# Migrations are registered in lib.rs and applied on startup; the JS side
# talks to it via @tauri-apps/plugin-sql (TauriSqlOutboxStore).
tauri-plugin-sql = { version = "2", features = ["sqlite"] }

# ── Serde + JSON for every IPC payload ───────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

# ── Async runtime + network ──────────────────────────────────────────
# `rustls-tls` keeps us off OpenSSL — easier cross-compile, smaller binary.
tokio = { version = "1", features = ["net", "time", "io-util", "rt-multi-thread", "macros", "process"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# ── Time + base64 + QR ───────────────────────────────────────────────
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
qrcode = "0.14"

# ── Image processing (Mandate 1) ─────────────────────────────────────
image = { version = "0.25", default-features = false, features = ["webp", "jpeg", "png"] }
webp = "0.3"

# ── PDF generation (Mandate 3-B) ─────────────────────────────────────
printpdf = "0.7"

# ── Mock-mode RNG for fail-rate injection ────────────────────────────
fastrand = "2"

# ── USB digital scale over serial (MT-SICS) ──────────────────────────
# NOTE: the goal said `serialport = "6"`, but the crate's latest is the 4.x
# line (no v5/v6 exists on crates.io); "4" resolves to the current 4.9.x.
serialport = "4"

# ── Epic C — encrypted local KYC vault (GwG / GDPR) ──────────────────
# AES-256-GCM at-rest encryption for ID scans; the 32-byte master key lives
# in the OS keyring (never on disk). `zeroize` wipes key material after use.
aes-gcm = "0.10"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
sha2 = "0.10"
zeroize = "1"
uuid = { version = "1", features = ["v4"] }
typst = "0.11"
typst-pdf = "0.11"
comemo = "0.4.0"
typst-assets = { version = "0.11", features = ["fonts"] }
mdns-sd = "0.20"

# ── Companion LAN hub (mother-as-server) ─────────────────────────────
# The mother POS embeds an axum server on the LAN so paired companion
# devices (second cashier / customer display) connect to it directly.
# `local-ip-address` resolves the real LAN IP for the pairing QR/URL.
# tokio already carries rt-multi-thread + net; axum reuses the existing hyper.
# `ws` enables the customer-display realtime WebSocket (GET /ws, phase 3); it
# pulls `tokio-tungstenite`, already resolvable in the lock graph.
axum = { version = "0.7", features = ["ws"] }
local-ip-address = "0.6"
# `futures-util` (already transitive via axum/reqwest) splits the WS into a
# sink + stream so the broadcast fan-out can push while the read half watches
# for the client closing the socket.
futures-util = "0.3"
# Hardening layers for the companion router (security review M2/M3/L2):
# request-body cap + per-request timeout from tower-http; a global concurrency
# cap from tower. Both are already in the lock graph (transitive via axum), so
# declaring them direct adds no new downloads. `percent-encoding` (also already
# transitive) is used to safely percent-decode + validate the proxy path (C2).
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["limit", "timeout"] }
percent-encoding = "2"
# Companion pairing/token security: CSPRNG token bytes + constant-time compare.
# Both already in the dependency graph (pulled by aes-gcm / keyring); declaring
# them direct just makes them usable here without new downloads.
getrandom = "0.2"
subtle = "2"
# Companion HTTPS (secure-context on the LAN hop). `axum-server` 0.7 binds the
# SAME axum 0.7 Router over rustls (hyper 1.x + rustls 0.23 + tokio-rustls 0.26
# — already the exact versions in the lock graph) with graceful shutdown;
# `rcgen` 0.13 mints the persisted self-signed cert (SANs = LAN IP + localhost +
# warehouse14.local). Both are rustls-only (NO OpenSSL — the project is
# OpenSSL-free). We pick `tls-rustls-no-provider` and bring the **ring** crypto
# provider (NOT aws-lc-rs) so we reuse the exact rustls+ring stack reqwest
# already links — no new `aws-lc-sys` C build, which keeps the Windows OTA
# cross-compile unchanged. `rcgen` defaults to `ring` too. If TLS setup fails at
# runtime we fall back to plain `axum::serve`, so these deps never become a hard
# runtime requirement.
axum-server = { version = "0.7", default-features = false, features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rcgen = "0.13"
